feat: standardize error responses & block shortening hostname
